Fix overflow

--- a/style-bhl.css
+++ b/style-bhl.css
@@ -27,7 +27,7 @@ body {
     -webkit-font-feature-settings: "lnum","kern","clig","calt";
     -moz-font-feature-settings: "lnum","kern","clig","calt";
     font-feature-settings: "lnum", "kern", "clig", "calt";
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .side-block div.menu-item a {
